update books issue#3

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,13 @@
  <!-- Contenido -->
  <section> 
 <b>Libros</b>
- <p>(Contenido)</p>
+ <p> PURGATORIO
+ -Sinopsis:
+
+ ¿Nunca te has preguntado si lo que hicimos estuvo mal y si todavía estemos a tiempo de repararlo?
+ El extraordinario debut como novelista de Jon Sistiaga con una impactante historia en torno a las heridas todavía abiertas del conflicto vasco.
+ El pasado siempre está mucho más cerca de lo que creemos
+ Hace treinta y cinco años, Imanol Azkarate fue secuestrado y ejecutado, pero sus dos asesinos nunca fueron detenidos ni identificados. Uno de ellos, Josu Etxebeste, conocido restaurador </p>
 </section>
  <section> 
 <b>Películas</b>
