--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,11 +16,11 @@
  <!-- Contenido -->
  <section> 
 <b>Libros</b>
- <p>(Contenido sobre libros)</p>
+ <p>El Señor de los Anillos</p>
 </section>
  <section> 
 <b>Películas</b>
- <p>(Contenido sobre películas)</p>
+ <p>Esta casa es una ruina</p>
  </section> 
  <!-- Pie de pagina -->
  <footer>
